--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@svgdotjs/svg.js": "^3.2.0",
     "solid-js": "^1.7.8"
   },
   "devDependencies": {
