v 0.2.5 - add configuration support - manage logging from environment

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "silent": "vite --mode silent",
+    "production": "vite --mode production",
     "build": "vite build",
     "preview": "vite preview"
   },
