--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mbarzda/solid-i18next": "^1.2.2",
     "@svgdotjs/svg.draggable.js": "^3.0.3",
     "@svgdotjs/svg.js": "^3.2.0",
     "@svgdotjs/svg.panzoom.js": "^2.1.2",
+    "i18next": "^23.6.0",
     "solid-js": "^1.7.8"
   },
   "devDependencies": {
